@@ -1,6 +1,10 @@
 ﻿[section Changelog]
 [no-subsection-numbers]
 
+[section#v1_0_4 Version 1.0.4, 201Y-MM-DD]
+- Fixed missing parser definitions in the @Parsing JSON@ section of the tutorial spotted by Josh Quintus -- thanks Josh!
+[/section]
+
 [section#v1_0_3 Version 1.0.3, 2017-08-20]
 - Modern solution and project files for .NET Core and VS 2017 were added to the source folders. Huge thanks to [url "https://github.com/neoeinstein" Marcus Griep] for spearheading the effort to make FParsec .NET Standard compatible and contributing the new project and solution files!
 - The old build script for the NuGet packages was replaced by a PowerShell script that uses the new project files.
